docs: draft strategy scoreboard detailed design section